--- a/src/styles.css
+++ b/src/styles.css
@@ -7,25 +7,45 @@
 *::after {
     box-sizing: border-box;
 }
+
 * {
     margin: 0;
     padding: 0;
 }
+
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
-img, picture, video, canvas, svg {
+
+img,
+picture,
+video,
+canvas,
+svg {
     display: block;
     max-width: 100%;
 }
-input, button, textarea, select {
+
+input,
+button,
+textarea,
+select {
     font: inherit;
 }
-p, h1, h2, h3, h4, h5, h6 {
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     overflow-wrap: break-word;
 }
-#root, #__next {
+
+#root,
+#__next {
     isolation: isolate;
 }
 
@@ -33,40 +53,316 @@ p, h1, h2, h3, h4, h5, h6 {
 */
 
 :root {
-    font-size: 16px;
-    --page-width: 750px;    
+    font-size: 12px;
 
-    color: rgb(29, 29, 181);
+    --font-size-small: 1rem;
+    --font-size-medium: 1.5rem;
+    --font-size-large: 2rem;
+    --font-size-jumbo: 4rem;
+    
+    --page-width: 750px;
+
+
+    --big-icon-side-length: 100px;
+    --search-section-length: calc(1.5 * var(--big-icon-side-length));
+
+    --standard-gap: 8px;
+
+
+    --general-padding: 20px;
+    --text-box-padding: 5px;
+    --high-temp-color: red;
+    --low-temp-color: blue;
+
+
+
+
+
+
+
+    --general-border-radius: 15px;
+}
+
+.dark {
+    /* Nighttime Color Scheme*/
+    --primary-background-color: #083344;
+    --primary-font-color: #fef3c7;
+}
+
+.light {
+    /* Morning/Day/Evening Color Scheme*/
+    --primary-background-color: #fef3c7;
+    --primary-font-color: #1c1917;
 }
 
 body {
- 
+    background-image: url("/home/asteroidblues30/repos/star-wars-weather/src/backgrounds/stars.jpg");
+    background-size: cover;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* height: 100vh; */
 }
 
-header {
 
-}
 
-p {
 
-}
+.main-container {
 
-#content {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+
     
+    width: 85vw; 
+
+    margin: 50px;
+    border: 10px solid var(--primary-background-color);
+
+    background-color: var(--primary-background-color);
+    /* background-image: url("./backgrounds/sunset-bespin.png"); */
+    
+
 }
 
-h1 {
-    font-size: 4rem;
+
+
+
+
+.search-container {
+    display: flex;
+    width: var(--search-section-length);
+
+    justify-content: space-between;
+
+
 }
 
-h2 {
-    font-size: 2rem;
+.header{
+    /* height: 10vh; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: var(--standard-gap);
+
+    width:100%;
+
+    height:100px;
+
+}
+
+
+.today-header {
+    font-size: var(--font-size-large);
+    text-align: center;
+
+    /* padding: var(--general-padding); */
+
+    /* border: 2px solid black; */
+
+    background-color: var(--primary-background-color);
+    color: var(--primary-font-color);
+}
+
+
+.search-bar {
+    font-size: var(--font-size-large);
+    /* align-self: center; */
+    width: 300px;
+    height: 60px;
+    margin-left: auto;
+    border-radius: var(--general-border-radius);
+
+    /* padding: var(--text-box-padding); */
+
+    padding: 15px;
+}
+
+.search-btn {
+    font-size: var(--font-size-large);
+    border-radius: var(--general-border-radius);
+    width: 100px;
+    height: 60px;
+}
+
+.middle-section{
+    width: 100%;
+    height: 70vh;
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    background-position: 0 center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+.todays-weather-container {
+
+    width: 400px; 
+    /* display: grid; */
+
+    grid-template-columns: 2fr 0.5fr 0.5fr;
+    grid-template-rows: 40px 170px 170px;
+    gap: 5px;
+
+    border: 2px solid black;
+    padding: 20px;
+    border-radius: 20px;
+
+    background-color: var(--primary-background-color);
+    color: var(--primary-font-color);
+}
+
+.weather-container-header{
+    display: flex;
+    width: 100%;
+    gap: var(--standard-gap);
+}
+
+.todays-weather-location {
+    font-size: var(--font-size-large);
+    /* text-align: center; */
+    /* grid-column: 1 / 4; */
+
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--primary-background-color);
+}
+
+.todays-weather-localtime{
+
+    margin-left: auto;
+    font-size: var(--font-size-large);
+}
+
+.weather-container-second-row{
+    display:flex;
+    gap: var(--standard-gap);
+    justify-content: space-between;
+}
+
+.todays-icon-container {
+    grid-row: 2 / 4;
+    align-self: center;
+    justify-self: center;
+
+    width: var(--big-icon-side-length);
+    height: var(--big-icon-side-length);
+
+    /* border: 2px solid black; */
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    /* background-color: var(--primary-background-color); */
+
+}
+
+.current-temp-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+
+    align-self: center;
+    justify-self: center;
+    grid-column: 2 / 4;
+}
+.current-temp {
+    font-size: var(--font-size-jumbo);
+    
+
+    
+    /* border: 2px solid black; */
+    background-color: var(--primary-background-color);
+}
+
+
+.high-low-box{
+display:flex;
+flex-direction: column;
+}
+
+/* .low-box {
+    grid-column: 2 / 3;
+
+
+}
+
+.high-box {
+    grid-column: 3 / 4;
+
+
+} */
+
+
+
+.high-box,
+.low-box {
+    font-size: var(--font-size-large);
+    /* border: 2px solid black; */
+
+    display:flex;
+    /* align-self: start;
+    justify-self: center; */
+
+    background-color: var(--primary-background-color);
+}
+
+.high {
+    color: var(--high-temp-color);
+    /* border: 2px solid black; */
+}
+
+.low {
+    color: var(--low-temp-color);
+    /* border: 2px solid black; */
+}
+
+.current-conditions {
+    font-size: var(--font-size-large);
+    text-align: center;
+    /* border: 2px solid black; */
+
+    align-self: center;
+    justify-self: center;
+    grid-column: 1 / 4;
+
+    background-color: var(--primary-background-color);
+}
+
+.convert-temp-btn{
+    font-size: var(--font-size-medium);
+    width: 130px;
+    height: 40px;
+}
+.upcoming-container {
+    display: flex;
+    border: 2px solid black;
+
+    /* height: 20vh; */
+    background-color: var(--primary-background-color);
+}
+
+.upcoming-day {
+    height: 100px;
+    width: 50px;
 }
 
 
 
 @media (max-width: 425px) {
-   :root {
-       font-size: 12px;
+    :root {
+        font-size: 12px;
     }
 }
