--- a/src/styles.css
+++ b/src/styles.css
@@ -425,7 +425,7 @@ body {
 
     body {
         max-width: 400px;
-        overflow: hidden;
+        overflow: scroll;
         height: 100vh;
         margin: 10px;
 
@@ -434,8 +434,10 @@ body {
     .main-container {
         /* max-width: 400px; */
         min-width: 0px;
-        height: 90vh;
+        height: 85vh;
         margin: 10px;
+        gap: 5px;
+        justify-content: center;
     }
 
     .header {
@@ -443,7 +445,7 @@ body {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: 170px;
+        height: 150px;
     }
 
     .convert-temp-btn {
@@ -473,13 +475,12 @@ body {
         width: 100%;
         height: 500px;
 
-
     }
 
 
     .todays-weather-container {
 
-        width: 80%;
+        width: 70%;
         justify-content: center;
         align-items: center;
 
@@ -491,19 +492,14 @@ body {
         gap: var(--standard-gap);
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 
     .todays-weather-location {
-        font-size: var(--font-size-large);
-        /* text-align: center; */
-        /* grid-column: 1 / 4; */
-
-        justify-content: space-between;
-        align-items: center;
-        background-color: var(--primary-background-color);
+    
+        text-align: center;
         overflow: hidden;
         text-overflow: ellipsis;
-
         width: 90%;
 
     }
