--- a/src/styles.css
+++ b/src/styles.css
@@ -231,6 +231,8 @@ body {
     background-position: 0 center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    position: relative;
 }
 
 
@@ -247,7 +249,7 @@ body {
 
     border: 2px solid black;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: var(--general-border-radius);
 
     background-color: var(--primary-background-color);
     color: var(--primary-font-color);
@@ -408,7 +410,20 @@ body {
     width: 50px;
 }
 
-
+.weather-like{
+    position: absolute;
+    /* width: 150px; */
+    
+    border-radius: var(--general-border-radius);
+    padding: var(--button-padding);
+    font-size: var(--font-size-medium);
+    top: 90%;
+    left: 70%;
+    border: 3px solid black;
+    
+    background-color:  var(--primary-background-color);
+    color: var(--primary-font-color);
+}
 
 @media (max-width: 425px) {
     :root {
@@ -424,10 +439,13 @@ body {
     }
 
     body {
-        max-width: 400px;
-        overflow: scroll;
+        max-width: 350px;
+        overflow-y: scroll;
         height: 100vh;
         margin: 10px;
+        justify-content: center;
+        align-items: center;
+        
 
     }
 
@@ -532,5 +550,16 @@ body {
     }
 
 
+    .weather-like{
+       
+        /* height: 40px; */
+       
+        padding: 3px;
+        font-size: var(--font-size-medium);
+        top: 90%;
+        left: 26%;
+        
+    }
+    
 
 }
